syntax = "proto3";

package account;

option go_package = "accountpb";
option java_multiple_files = true;
option java_outer_classname = "ServiceProto";
option java_package = "com.account";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-swagger/options/annotations.proto";

// AccountService allows for account management on the Node
service AccountService {
  rpc GetAllAccounts(google.protobuf.Empty) returns (GetAllAccountResponse) {
    option (google.api.http) = {
      get: "/v1/accounts"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Get All Accounts"
    };
  }
  rpc CreateAccount(AccountData) returns (AccountData) {
    option (google.api.http) = {
      post: "/v1/accounts"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Creates an Account"
    };
  }
  rpc GenerateAccount(google.protobuf.Empty) returns (AccountData) {
    option (google.api.http) = {
      post: "/v1/accounts/generate"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Generates an Account taking defaults based on the main account"
    };
  }
  rpc UpdateAccount(UpdateAccountRequest) returns (AccountData) {
    option (google.api.http) = {
      put: "/v1/accounts/{account_id}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Updates an Account"
    };
  }
}

message GetAllAccountResponse {
  repeated AccountData data = 1;
}

message UpdateAccountRequest {
  string account_id = 1;
  AccountData data = 2;
}

message EthereumAccount {
  string address = 1;
  string key = 2;
  string password = 3;
}

message KeyPair {
  string pub = 1;
  string pvt = 2;
}

message AccountData {
  EthereumAccount eth_account = 1;
  string eth_default_account_name = 2;
  string receive_event_notification_endpoint = 3;
  string identity_id = 4;
  KeyPair signing_key_pair = 5;
  KeyPair p2p_key_pair = 7;
}
